- updates to MS-SQL driver: 
   -- fixes bug 261 (table reflection broken for MS-SQL case-sensitive databases)
   -- can now specify port for pymssql
   -- introduces new "auto_identity_insert" option for auto-switching between "SET IDENTITY_INSERT" mode when values specified for IDENTITY columns 
   -- now supports multi-column foreign keys
   -- fix to reflecting date/datetime columns
- more rearrangements of unit-of-work commit scheme to better allow
dependencies within circular flushes to work properly...updated
task traversal/logging implementation
- changed "for_update" parameter to accept False/True/"nowait"
and "read", the latter two of which are interpreted only by
Oracle and Mysql [ticket:292]
- added "lockmode" argument to base Query select/get functions, 
including "with_lockmode" function to get a Query copy that has 
a default locking mode.  Will translate "read"/"update" 
arguments into a for_update argument on the select side.
[ticket:292]
- implemented "version check" logic in Query/Mapper, used
when version_id_col is in effect and query.with_lockmode()
is used to get() an instance thats already loaded
- fixed bug where Connection wouldnt lose its Transaction
after commit/rollback
- added extract() function to sql dialect
- added an implicit close() on the cursor in ResultProxy
when the result closes
- added scalar() method to ComposedSQLEngine, ResultProxy
- post_update behavior improved; does a better job at not 
updating too many rows, updates only required columns
[ticket:208]
- BooleanExpression includes new "negate" argument to specify
the appropriate negation operator if one is available.
- calling a negation on an "IN" or "IS" clause will result in
"NOT IN", "IS NOT" (as opposed to NOT (x IN y)). 
- adjustments to eager loading so that its "eager chain" is
kept separate from the normal mapper setup, thereby
preventing conflicts with lazy loader operation, fixes 
[ticket:308]
- fix to deferred group loading